# Wayfinder

./: .gitignore  AGENTS.md  CERTIFICATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_READINESS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  VALIDATION.md  VERSIONING.md  WAYFINDER.md  aurora  wf
.forge/: session.json
.github/: README.md
BUILD_BIBLE/: INDEX.md  README.md
BUILD_OPERATIONS/: README.md
engines/ark/legacy/ark/: Cargo.toml  __init__.py  api_gateway.py  autoscaler.py  axioms.py  codegen_safe.py  config.py  duck_client.py  emitter_contracts.py  event_schema.py  git_reconcile.py  gsb.py  import_audit.py  maintenance.py  math_utils.py  mcp_containment.py  mesh_registry.py  performance.py  policy_engine.py  reducers.py  runtime_contracts.py  runtime_flow.py  sd_trisca.py  security.py  skills.py  subjects.py  task_graph.py  time_utils.py  tool_system.py
engines/ark/legacy/ark/integrations/: __init__.py  contracts.py  docker.py  http.py  maps.py  registry.py  web.py
engines/ark/legacy/ark/src/: lib.rs  main.rs  otel.rs  types.rs
engines/ark/legacy/ark/src/compress/: zstd.rs
engines/ark/legacy/ark/src/control/: plane.rs
engines/ark/legacy/ark/src/delta/: compute.rs
engines/ark/legacy/ark/src/event/: wal.rs
engines/ark/legacy/ark/src/ingest/: audio.rs  image.rs  mod.rs  net.rs  text.rs  video.rs
engines/ark/legacy/ark/src/policy/: engine.rs
engines/ark/legacy/ark/src/replay/: engine.rs
engines/ark/legacy/ark/src/storage/: duck.rs
engines/ark/legacy/ark/src/trisca/: core.rs  kalman.rs  mod.rs  system.rs
(+1255 files in other folders)
